# OpenGL_shader_demo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/camera/: basic_camera_controller.cpp  camera.cpp  camera.h
src/model/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h
src/model/primitives/: generate_primitives.cpp  generate_primitives.h
src/scene/: demo_scene.cpp  scene.cpp  scene.h
src/shaders/: compute_shader.h  shader.cpp  shader.h
src/shaders/fragment_shaders/: depth_shader.fs  lighting_shadow_shader.fs  render_shader.fs  simple_fragment.fs
src/shaders/vertex_shaders/: depth_shader.vs  lighting_shadow_shader.vs  render_shader.vs  simple_vertex.vs
